# estate_bot

./: .dockerignore  .gitignore  Dockerfile  Group_list_for_parsing.txt  README.md  about_tg_bot_info.txt  backlog.txt  bot.py  bot_aiogram.py  city.py  city_parsing.py  config.in  config.ini  create_db.py  data_base.cs  data_base.csv  main.py  mysql_message_db.py  mysql_user_choice_db.py  mysql_user_request.py  price.py  price_parsing.py  pyproject.toml  requirements.txt  send_msg_to_user.py  sqlite_create_db.py  sqlite_message_db.py  sqlite_user_choice_db.py  sqlite_user_request.py  tg_keyboards.py  tg_user_communication.py  wdelit_csv_data.py  wdelit_sqlite_user_choice_db.py  wdelit_tg_user_communication.py
bot/: bot_telethon.py  send_msg_to_user.py
bot/keyboards/: tg_keyboards_aiogram.py
config/: __init__.py
database/: sqlite_commit_db.py  sqlite_create_db.py  sqlite_message_db.py  sqlite_user_request.py  sqlite_view_db.py
estate_bot/: bot_aiogram.py  main.py
estate_bot/bot/: bot_telethon.py  send_msg_to_user.py
estate_bot/bot/keyboards/: tg_keyboards_aiogram.py
estate_bot/config/: data.py
estate_bot/database/: sqlite_commit_db.py  sqlite_create_db.py  sqlite_view_db.py
estate_bot/functions/: city_parsing.py  price_parsing.py  time_count_decorator.py  translate.py
functions/: city_parsing.py  price_parsing.py  time_count_decorator.py
tests/: test_main.py
